Name:            iomap
Version:         0.0.1
Cabal-Version:   >= 1.8
Copyright:       Copyright (c) Tobias Schoofs, 2011
License:         LGPL
license-file:    license/lgpl-3.0.txt
Author:          Tobias Schoofs
Maintainer:      Tobias Schoofs <tobias dot schoofs at gmx dot net>
Homepage:        http://github.com/toschoo/haskell/
Category:        Data, Map, IO
Build-Type:      Simple
Synopsis:        Map data structure for concurrent IO actions
Description:

  More information, examples and a test suite are available 
  on <http://github.com/toschoo/haskell>.

Library
  Build-Depends:   base        >= 4.0 && <= 5.0,
                   time        >= 1.1.4

  hs-source-dirs: src/common, src, .
                   
  Exposed-Modules: Data.IOMap
  other-modules: Graph

